kubernetes/flux-system/receiver.yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    # External DNS for public access via Cloudflare
    external-dns.alpha.kubernetes.io/external: "true"
    external-dns.alpha.kubernetes.io/target: "eviljungle.com"
spec:
  ingressClassName: nginx
  rules:
  - host: &host flux-webhook.eviljungle.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - *host
